--- a/bootstrap/style.sass
+++ b/bootstrap/style.sass
@@ -1,8 +1,9 @@
-// $body-bg: #6694F1
+$body-bg: #F5F8FD
 
 @import "../node_modules/bootstrap/scss/bootstrap"
 
 h1, h2, h3, h4
-  font-family: 'Zilla Slab', serif
-  font-weight: 700
-.background 
+  font-family: 'Golos', serif
+  font-weight: 700 
+
+.top-buffer { margin-top: 32px; }
