--- a/public/style.css
+++ b/public/style.css
@@ -46,7 +46,7 @@
   --bs-white-rgb: 255, 255, 255;
   --bs-black-rgb: 0, 0, 0;
   --bs-body-color-rgb: 33, 37, 41;
-  --bs-body-bg-rgb: 102, 148, 241;
+  --bs-body-bg-rgb: 245, 248, 253;
   --bs-font-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --bs-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
   --bs-gradient: linear-gradient(180deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0));
@@ -55,7 +55,7 @@
   --bs-body-font-weight: 400;
   --bs-body-line-height: 1.5;
   --bs-body-color: #212529;
-  --bs-body-bg: #6694F1; }
+  --bs-body-bg: #F5F8FD; }
 
 *,
 *::before,
@@ -481,7 +481,7 @@ progress {
 
 .img-thumbnail {
   padding: 0.25rem;
-  background-color: #6694F1;
+  background-color: #F5F8FD;
   border: 1px solid #dee2e6;
   border-radius: 0.25rem;
   max-width: 100%;
@@ -1536,7 +1536,7 @@ progress {
   font-weight: 400;
   line-height: 1.5;
   color: #212529;
-  background-color: #6694F1;
+  background-color: #F5F8FD;
   background-clip: padding-box;
   border: 1px solid #ced4da;
   appearance: none;
@@ -1551,7 +1551,7 @@ progress {
       cursor: pointer; }
   .form-control:focus {
     color: #212529;
-    background-color: #6694F1;
+    background-color: #F5F8FD;
     border-color: #86b7fe;
     outline: 0;
     box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25); }
@@ -1673,7 +1673,7 @@ textarea.form-control-lg {
   font-weight: 400;
   line-height: 1.5;
   color: #212529;
-  background-color: #6694F1;
+  background-color: #F5F8FD;
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23343a40' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M2 5l6 6 6-6'/%3e%3c/svg%3e");
   background-repeat: no-repeat;
   background-position: right 0.75rem center;
@@ -1726,7 +1726,7 @@ textarea.form-control-lg {
   height: 1em;
   margin-top: 0.25em;
   vertical-align: top;
-  background-color: #6694F1;
+  background-color: #F5F8FD;
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
@@ -1801,9 +1801,9 @@ textarea.form-control-lg {
   .form-range:focus {
     outline: 0; }
     .form-range:focus::-webkit-slider-thumb {
-      box-shadow: 0 0 0 1px #6694F1, 0 0 0 0.25rem rgba(13, 110, 253, 0.25); }
+      box-shadow: 0 0 0 1px #F5F8FD, 0 0 0 0.25rem rgba(13, 110, 253, 0.25); }
     .form-range:focus::-moz-range-thumb {
-      box-shadow: 0 0 0 1px #6694F1, 0 0 0 0.25rem rgba(13, 110, 253, 0.25); }
+      box-shadow: 0 0 0 1px #F5F8FD, 0 0 0 0.25rem rgba(13, 110, 253, 0.25); }
   .form-range::-moz-focus-outer {
     border: 0; }
   .form-range::-webkit-slider-thumb {
@@ -2954,8 +2954,8 @@ textarea.form-control-lg {
   .nav-tabs .nav-link.active,
   .nav-tabs .nav-item.show .nav-link {
     color: #495057;
-    background-color: #6694F1;
-    border-color: #dee2e6 #dee2e6 #6694F1; }
+    background-color: #F5F8FD;
+    border-color: #dee2e6 #dee2e6 #F5F8FD; }
   .nav-tabs .dropdown-menu {
     margin-top: -1px;
     border-top-left-radius: 0;
@@ -3516,7 +3516,7 @@ textarea.form-control-lg {
   font-size: 1rem;
   color: #212529;
   text-align: left;
-  background-color: #6694F1;
+  background-color: #F5F8FD;
   border: 0;
   border-radius: 0;
   overflow-anchor: none;
@@ -3556,7 +3556,7 @@ textarea.form-control-lg {
   margin-bottom: 0; }
 
 .accordion-item {
-  background-color: #6694F1;
+  background-color: #F5F8FD;
   border: 1px solid rgba(0, 0, 0, 0.125); }
   .accordion-item:first-of-type {
     border-top-left-radius: 0.25rem;
@@ -7813,10 +7813,10 @@ textarea.form-control-lg {
     display: none !important; } }
 
 h1, .h1, h2, .h2, h3, .h3, h4, .h4 {
-  font-family: 'Zilla Slab', serif;
+  font-family: 'Golos', serif;
   font-weight: 700; }
 
 .top-buffer {
-  margin-top: 20px; }
+  margin-top: 32px; }
 
 /*# sourceMappingURL=style.css.map */
