--- a/views/index.njk
+++ b/views/index.njk
@@ -15,7 +15,7 @@
     <title>{{ title }}</title>
   </head>
   <body>
-
+  <form action="/send" method="post">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
@@ -29,53 +29,85 @@
         </div>
     </nav>
 
+    <div class="container">
+      <div class="row top-buffer">
+        <div class="col-sm-2 offset-2">
+          <div class="shadow-sm p-3 mb-5 bg-body rounded vertical-center">
+            <br><label class="form-label">О компании</label></br>
+            <br><label class="form-label1">Моя продукция</label></br>
+            <br><label class="form-label2">Безопасность</label></br>
+            <br><label class="form-label3">Уведомления</label></br>
+            <br><label class="form-label4">Выход</label></br>
+          </div>
+        </div>
+        <div class="col-sm-6 offset-1">
+          <div class="shadow-sm p-3 mb-5 bg-body rounded vertical-center">
+            <br><h4><label class="form-label">Общая информация</label></h4></br>
+            <div class="mb-3">
+                 <label for="exampleInputEmail1" class="form-label1">Название компании</label>
+                 <input type="text" class="form-control" name="nameCompany" id="validationCustomUsername" aria-describedby="inputGroupPrepend" required>  
+            </div>
+            <div class="row">
+              <div class="col-sm-5">
+                <div class="mb-3">
+                    <label for="exampleInputEmail1" class="form-label">ИНН</label>
+                    <input type="email" class="form-control" name="INN" id="exampleInputEmail1" aria-describedby="emailHelp">
+                </div>
+              </div>
+              <div class="col-sm-5">
+                <div class="mb-3">
+                   <label for="exampleInputEmail1" class="form-label">КПП</label>
+                   <input type="email" class="form-control" name="KPP" id="exampleInputEmail1" aria-describedby="emailHelp">
+                </div>
+              </div>
+            </div>
+            <div class="mb-3">
+              <label for="exampleInputEmail1" class="form-label">Юридический адрес</label>
+               <input type="email" class="form-control" name="urAdress" id="exampleInputEmail1" aria-describedby="emailHelp">
+            </div>
+            <div class="mb-3">
+             <label for="exampleInputEmail1" class="form-label">Фактический адрес</label>
+             <input type="email" class="form-control" name="factAdress" id="exampleInputEmail1" aria-describedby="emailHelp">
+            </div>
+            <br><h4><label class="form-label">О продукции</label></h4></br>
+              <div class="mb-3">
+                 <label for="exampleInputEmail1" class="form-label">Основной вид деятельности</label>
+                 <input type="email" class="form-control" name="kindDeal" id="exampleInputEmail1" aria-describedby="emailHelp">
+            </div>
+            <div class="mb-3">
+                 <label for="exampleInputEmail1" class="form-label">Выпускаемая продукция</label>
+                 <input type="email" class="form-control" name="releaseProduct" id="exampleInputEmail1" aria-describedby="emailHelp">
+            </div>
+            <br><h4><label class="form-label">Контактная информация</label></h4></br>
+            <div class="mb-3">
+                 <label for="exampleInputEmail1" class="form-label">Телефон</label>
+                 <input type="email" class="form-control" name="phoneNumber" id="exampleInputEmail1" aria-describedby="emailHelp">
+            </div>
+            <div class="mb-3">
+                 <label for="exampleInputEmail1" class="form-label">Электроннная почта</label>
+                 <input type="email" class="form-control" name="email" id="exampleInputEmail1" aria-describedby="emailHelp">
+            </div>
+            <div class="mb-3">
+                 <label for="exampleInputEmail1" class="form-label">Сайт</label>
+                 <input type="email" class="form-control" name="website" id="exampleInputEmail1" aria-describedby="emailHelp">
+            </div>
+            <div class="row" style="margin-top: 48px">
+              <div class="col-sm-4"> 
+                <button type="submit" class="btn btn-primary btn-sm" style="height: 56px; border-radius: 12px; background: #0044CC">Отправить на проверку*</button>
+              </div>
+              </form>
+              <div class="col-md-6">
+                <label class="form-label" style="font-size:14px; padding-top: 8px">
+                 *Для сохранения внесенных изменений, 
+                 отправьте данные на повторную проверку.         
+                </label>
+              </div>
+            </div>
+          </div>
+        </div>  
+        </div>
+      </div> 
    
-<div class="container">
-    <div class="row">
-        <div class="col-sm-4 offset -2"> 
-            <div class="shadow-sm p-3 mb-5 bg-body rounded vertical-center width=300 height=300">
-                    <div class="mb-3">
-                     <label for="exampleInputEmail1" class="form-label">Название компании</label>
-                         <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-  </div>
-                    <div class="mb-3">
-                         <label for="exampleInputPassword1" class="form-label">ИНН</label>
-                        <input type="password" class="form-control" id="exampleInputPassword1">
-  </div>
-  </div>
-
-
- {# <div class="row top-buffer"> 
-    <div class="col-md-4">
-    <div class="shadow-sm p-3 mb-5 bg-body rounded vertical-center width=300 height=300">
-  <form>
-  <div class="mb-3">
-    <label for="exampleInputEmail1" class="form-label">Название компании</label>
-    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-  </div>
-  <div class="mb-3">
-    <label for="exampleInputPassword1" class="form-label">ИНН</label>
-    <input type="password" class="form-control" id="exampleInputPassword1">
-  </div>
-  </form>
-  </div> #}
-
-    {# </div>
-    <div class="col-md-8">
-        <div class="shadow-sm p-3 mb-5 bg-body rounded vertical-center width=300 height=300">
-  <form>
-  <div class="mb-3">
-    <label for="exampleInputEmail1" class="form-label">Название компании</label>
-    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-  </div>
-  <div class="mb-3">
-    <label for="exampleInputPassword1" class="form-label">ИНН</label>
-    <input type="password" class="form-control" id="exampleInputPassword1">
-  </div>
-  </form>
-  </div>
-    </div>
-</div> #}
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
