--- a/views/index.njk
+++ b/views/index.njk
@@ -18,6 +18,9 @@
   <form action="/send" method="post">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="collapse navbar-collapse" id="navbarNav">
+        <a class="navbar-brand" href="#">
+           <img src="res/logo.png" width="174" height="24" style="margin-left: 230px" alt="">
+        </a>
         <ul class="navbar-nav ms-auto">
             <li class="nav-item">
             <a class="nav-link" href="#">Компании</a>
@@ -31,57 +34,53 @@
 
     <div class="container">
       <div class="row top-buffer">
-        <div class="col-sm-2 offset-2">
-          <div class="shadow-sm p-3 mb-5 bg-body rounded vertical-center">
-            <br><label class="form-label">О компании</label></br>
-            <br><label class="form-label1">Моя продукция</label></br>
-            <br><label class="form-label2">Безопасность</label></br>
-            <br><label class="form-label3">Уведомления</label></br>
-            <br><label class="form-label4">Выход</label></br>
+        <div class="col-sm-2">
+          <div class="test">
+            <img src="res/menu.png" width="188" height="296" alt=""></img>
           </div>
         </div>
-        <div class="col-sm-6 offset-1">
+        <div class="col-sm-6 offset-2">
           <div class="shadow-sm p-3 mb-5 bg-body rounded vertical-center">
             <br><h4><label class="form-label">Общая информация</label></h4></br>
             <div class="mb-3">
                  <label for="exampleInputEmail1" class="form-label1">Название компании</label>
-                 <input type="text" class="form-control" name="nameCompany" id="validationCustomUsername" aria-describedby="inputGroupPrepend" required>  
+                 <input type="text" class="form-control" name="companyName" id="validationCustomUsername" aria-describedby="inputGroupPrepend" required>  
             </div>
             <div class="row">
               <div class="col-sm-5">
                 <div class="mb-3">
                     <label for="exampleInputEmail1" class="form-label">ИНН</label>
-                    <input type="email" class="form-control" name="INN" id="exampleInputEmail1" aria-describedby="emailHelp">
+                    <input type="text" class="form-control" name="INN">
                 </div>
               </div>
               <div class="col-sm-5">
                 <div class="mb-3">
                    <label for="exampleInputEmail1" class="form-label">КПП</label>
-                   <input type="email" class="form-control" name="KPP" id="exampleInputEmail1" aria-describedby="emailHelp">
+                   <input type="text" class="form-control" name="KPP" id="exampleInputEmail1" aria-describedby="emailHelp">
                 </div>
               </div>
             </div>
             <div class="mb-3">
               <label for="exampleInputEmail1" class="form-label">Юридический адрес</label>
-               <input type="email" class="form-control" name="urAdress" id="exampleInputEmail1" aria-describedby="emailHelp">
+               <input type="text" class="form-control" name="urAddress" id="exampleInputEmail1" aria-describedby="emailHelp">
             </div>
             <div class="mb-3">
              <label for="exampleInputEmail1" class="form-label">Фактический адрес</label>
-             <input type="email" class="form-control" name="factAdress" id="exampleInputEmail1" aria-describedby="emailHelp">
+             <input type="text" class="form-control" name="factAddress" id="exampleInputEmail1" aria-describedby="emailHelp">
             </div>
             <br><h4><label class="form-label">О продукции</label></h4></br>
               <div class="mb-3">
                  <label for="exampleInputEmail1" class="form-label">Основной вид деятельности</label>
-                 <input type="email" class="form-control" name="kindDeal" id="exampleInputEmail1" aria-describedby="emailHelp">
+                 <input type="text" class="form-control" name="kindDeal" id="exampleInputEmail1" aria-describedby="emailHelp">
             </div>
             <div class="mb-3">
                  <label for="exampleInputEmail1" class="form-label">Выпускаемая продукция</label>
-                 <input type="email" class="form-control" name="releaseProduct" id="exampleInputEmail1" aria-describedby="emailHelp">
+                 <input type="text" class="form-control" name="releaseProduction" id="exampleInputEmail1" aria-describedby="emailHelp">
             </div>
             <br><h4><label class="form-label">Контактная информация</label></h4></br>
             <div class="mb-3">
                  <label for="exampleInputEmail1" class="form-label">Телефон</label>
-                 <input type="email" class="form-control" name="phoneNumber" id="exampleInputEmail1" aria-describedby="emailHelp">
+                 <input type="text" class="form-control" name="phoneNumber" pattern="\+7\-[0-9]{3}\-[0-9]{3}\-[0-9]{2}\-[0-9]{2}">
             </div>
             <div class="mb-3">
                  <label for="exampleInputEmail1" class="form-label">Электроннная почта</label>
@@ -89,11 +88,11 @@
             </div>
             <div class="mb-3">
                  <label for="exampleInputEmail1" class="form-label">Сайт</label>
-                 <input type="email" class="form-control" name="website" id="exampleInputEmail1" aria-describedby="emailHelp">
+                 <input type="text" class="form-control" name="web" id="exampleInputEmail1" aria-describedby="emailHelp">
             </div>
             <div class="row" style="margin-top: 48px">
               <div class="col-sm-4"> 
-                <button type="submit" class="btn btn-primary btn-sm" style="height: 56px; border-radius: 12px; background: #0044CC">Отправить на проверку*</button>
+                <button type="submit" class="btn btn-primary btn-sm" style="height: 56px; background: #0F0F29">Отправить на проверку*</button>
               </div>
               </form>
               <div class="col-md-6">
